# NearformChristmasHackathon

./: .gitignore  README.md  start-dev.bat  start-dev.sh
.kiro/steering/: product.md  structure.md  tech.md
backend/: .gitignore  API.md  README.md  pyproject.toml
backend/app/: .env.example  main.py
backend/app/elfagent/: agent.py
backend/app/tools/: __init__.py  agenttools.py  alibabatools.py  awstools.py
backend/app/utils/: __init__.py  const.py  utility.py
backend/tests/integrations/: test_api.py
backend/tests/units/tools/: test_awstools.py
docs/: Design.md  TODO.md
frontend/: README.md  nx.json  package.json  tsconfig.json
frontend/apps/chat/: .env.example  jest.config.cts  package.json  tsconfig.json
frontend/apps/chat-e2e/: package.json  playwright.config.ts
frontend/apps/chat/src/app/: global.css  page.tsx
frontend/apps/chat/src/components/: chat_interface.spec.tsx  chat_interface.tsx  chat_message.spec.tsx  chat_message.tsx  gift_card.spec.tsx  gift_card.tsx  snowflakes.spec.tsx  snowflakes.tsx
frontend/apps/chat/src/types/: index.ts
